--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
   font-weight: 600;
 }
 
-.home-container > button{
+.product-btn{
   background-color: rgb(255,112,67);
   padding: 10px 30px;
   border-radius: 3px;
@@ -40,4 +40,32 @@
 .heading{
   margin-right: 80%;
   margin-top: 0px;
+}
+.product-cont{
+  border: 1px solid gray;
+  width: 87%;
+  margin: auto;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  gap: 20px;
+  /* position: relative; */
+}
+.product-item{
+  border: 1px solid lightgray;
+  background-color: rgb(235, 231, 231);
+  /* position: absolute; */
+}
+.product-details{
+  display: flex;
+    justify-content: space-between;
+    padding: 0px 84px;
+    font-size: 18px;
+    font-weight: 600;
+}
+.product-details> p:nth-child(3){
+  color: rgb(255,112,67);
+}
+.product-btn-container{
+  margin-top: -18px;
+    margin-bottom: 15px;
 }
