--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,97 @@
 .App {
   text-align: center;
 }
-.cart-container{
-  border: 1px solid black;
+
+/* ---------------------------navbar style start---------------- */
+.navbar-container{
+  border: 1px solid gray;
   background-color: rgb(238, 179, 107);
   display: flex;
   justify-content: right;
   /* justify-content: space-between; */
-  padding: 20px 200px;
+  padding: 8px 200px;
 }
-.cart-container > img{
+.cart-logo{
   height: 50px; 
+  margin-top: 18px;
+  cursor: pointer;
 }
-.cart-container > span{
+.navbar-container > span{
   background-color: crimson;
   color: #fff;
   padding: 6px;
   position: absolute;
-  top: 15px;
+  top: 20px;
   height: 13px;
   display: flex;
   align-items: center;
   border-radius: 11px;
   font-weight: 600;
 }
+.navbar-heading{
+  margin-right: 80%;
+  margin-top: 0px;
+  display: flex;
+  align-items: center;
+  gap: 25px;
+}
+.navbar-heading > h1{
+  color: rgb(48, 48, 48);
+}
+.navbar-home{
+  margin-right: -50px;
+  margin-left: 30px;
+  margin-top: 5px;
+  font-size: 22px;
+  font-weight: 600;
+  text-decoration: none;
+  color: rgb(88, 88, 88);
+}
+.navbar-home:hover{
+  text-decoration: underline;
+  color: rgb(48, 48, 48);
+  transition: .3s ease;
+}
+/* -------------navbar style end---------------------- */
 
+
+/* -----------------------------home page syle start---------------------------- */
+.home-container{
+  /* border: 1px solid lightgray; */
+  width: 70%;
+  margin: auto;
+}
+.product-cont{
+  /* border: 1px solid gray; */
+  display: grid;
+  grid-template-columns: auto auto auto;
+  gap: 20px;
+  margin-bottom: 50px;
+  margin-top: 30px;
+  /* cursor: pointer; */
+}
+.product-item{
+  border: 1px solid lightgray;
+  background-color: rgb(235, 231, 231);
+}
+.product-item>img{
+  width: 100%;
+  /* height: 60%; */
+}
+.product-details{
+  display: flex;
+  justify-content: space-between;
+  padding: 0px 70px;
+  font-size: 18px;
+  font-weight: 600;
+  margin-top: -15px;
+}
+.product-details> p:nth-child(3){
+  color: rgb(255,112,67);
+}
+.product-details> p:nth-child(2){
+  text-decoration: line-through;
+}
 .product-btn{
   background-color: rgb(255,112,67);
   padding: 10px 30px;
@@ -37,35 +104,144 @@
   cursor: pointer;
   margin-left: 10px;
 }
-.heading{
-  margin-right: 80%;
-  margin-top: 0px;
-}
-.product-cont{
-  border: 1px solid gray;
-  width: 87%;
-  margin: auto;
-  display: grid;
-  grid-template-columns: auto auto auto;
-  gap: 20px;
-  /* position: relative; */
-}
-.product-item{
-  border: 1px solid lightgray;
-  background-color: rgb(235, 231, 231);
-  /* position: absolute; */
-}
-.product-details{
-  display: flex;
-    justify-content: space-between;
-    padding: 0px 84px;
-    font-size: 18px;
-    font-weight: 600;
-}
-.product-details> p:nth-child(3){
-  color: rgb(255,112,67);
-}
 .product-btn-container{
   margin-top: -18px;
-    margin-bottom: 15px;
+  /* margin-bottom: -120px; */
+  margin-bottom: 15px;
+}
+/* --------------home page style end---------------- */
+
+/*----------------------cart style start------------------ */
+.cart-container{
+  background-color: rgb(235, 232, 232);
+  /* height: 600px; */
+}
+.cart-flex-top{
+  display: flex;
+  justify-content: space-between;
+  width: 58.5%;
+  margin-bottom: -35px;
+  margin-left: 119px;
+}
+.cart-flex-top>h1{
+  text-decoration: underline;
+  color: rgb(48, 48, 48);
+}
+.cart-main-cont{
+  /* border: 1px solid green; */
+  width: 85%;
+  margin: auto;
+  display: flex;
+  gap: 20px;
+  padding-top: 50px;
+}
+.cart-left-cont{
+  /* border: 1px solid blue; */
+  
+  /* height: 40%; */
+  width: 100%;
+}
+.cart-left-top{
+  border: 1px solid rgb(207, 205, 205);
+  padding: 19px;
+  display: flex;
+  gap: 30px;
+  width: 95%;
+  margin-bottom: 10px;
+  background-color: rgb(255,255,255);
+}
+.cart-move{
+  display: flex;
+  gap: 20px;
+}
+.cart-move > img{
+  width: 30%;
+}
+.cart-move > p{
+  font-weight: 500;
+  font-size: 13px;
+  cursor: pointer;
+}
+.cart-vertical-line{
+  border: 1px solid gray;
+  /* height: 300px; */
+}
+.cart-club-price{
+  display: flex;
+}
+.cart-club-price > img{
+  height: 20%;
+  width: 15%;
+}
+.cart-club-price > p{
+  margin-top: 2px;
+  margin-left: 5px;
+  font-size: 14px;
+  color: rgb(41,123,255);
+  cursor: pointer;
+}
+.cart-mrp{
+  font-size: 14px;
+  margin-top: -14px;
+  color: gray;
+}
+.cart-right-top{
+  /* margin-left: -5px; */
+  width: 29%;
+}
+.cart-off{
+  color: #FF7043;
+  font-weight: 500;
+}
+.cart-price{
+  text-decoration: line-through;
+}
+.cart-place-order{
+  display: grid;
+  grid-template-columns: 67% 29.5%;
+  border: 1px solid rgb(207, 205, 205);
+  margin-top: 29px;
+  padding: 0px 30px;
+  background-color: rgb(255,255,255);
+  gap: 20px;
+}
+.cart-delevery{
+  background-color: #FF7043;
+  color: #fff;
+  font-weight: 500;
+  padding: 15px;
+  text-align: center;
+  border-radius: 3px;
+  cursor: pointer;
+}
+.cart-order{
+  background-color: gray;
+  display: flex;
+  gap: 20px;
+  height: 60%;
+  margin-top: 16px;
+  padding: 0px 12px;
+  border-radius: 3px;
+  color: #fff;
+  cursor: pointer;
+}
+.cart-order > h5{
+  margin-top: 18px;
+  margin-left: 20px;
+}
+.cart-right-cont{
+  border: 1px solid rgb(207, 205, 205);
+  width: 450px;
+  height: 200px;
+  background-color: rgb(255,255,255);
+  padding: 15px;
+}
+.cart-right-cont > div{
+  display: flex;
+  justify-content: space-between;
+  margin-top: -20px;
+  font-size: 14px;
+}
+.cart-right-cont > div:nth-child(3){
+  color: green;
 }
