--- a/src/App.css
+++ b/src/App.css
@@ -167,20 +167,6 @@
   border: 1px solid gray;
   /* height: 300px; */
 }
-.cart-club-price{
-  display: flex;
-}
-.cart-club-price > img{
-  height: 20%;
-  width: 15%;
-}
-.cart-club-price > p{
-  margin-top: 2px;
-  margin-left: 5px;
-  font-size: 14px;
-  color: rgb(41,123,255);
-  cursor: pointer;
-}
 .cart-mrp{
   font-size: 14px;
   margin-top: -14px;
@@ -245,4 +231,37 @@
 }
 .cart-right-cont > div:nth-child(3){
   color: green;
+}
+.cart-item-quantity{
+  display: flex;
+    justify-content: right;
+    margin-top: 8px;
+    height: 33px;
+}
+.cart-item-quantity > input::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: green;
+  opacity: 5; /* Firefox */
+  font-weight: 600;
+}
+.cart-item-quantity > input{
+  width: 23%;
+  border: 1px solid gray;
+  outline: 0px;
+  color: black;
+  text-align: center;
+}
+/* Chrome, Safari, Edge, Opera */
+.cart-item-quantity > input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+/* Firefox */
+.cart-item-quantity > input[type=number] {
+  -moz-appearance: textfield;
+}
+
+.cart-item-quantity > button{
+  width: 18%;
+  font-size: 20px;
 }
