--- a/src/styles/edprimeHelp.css
+++ b/src/styles/edprimeHelp.css
@@ -1,5 +1,5 @@
 .edprime-help-container{
-    border: 1px solid black;
+    border: 1px solid lightgray;
     width: 30%;
     height: 620px;
     /* padding: 10px; */
@@ -9,6 +9,8 @@
     flex-direction: column;
     gap: 224.2px;
     margin-bottom: 50px;
+    margin-top: 30px;
+    box-shadow: 0px 2px 20px 3px lightgrey;
 }
 .help-top-cont{
     /* border: 1px solid red; */
