--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.img-container:before {
+  content: '';
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRlLivh7bT6RRgeL2Qt7E1Z4-ZBJdzkwuqEuQ&usqp=CAU);
+  /* background: url(https://cdn0.iconfinder.com/data/icons/entypo/92/help-512.png); */
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.img-container img {
+  display: none;
+}
